<resources>
    <string name="app_name">RES</string>
    <string name="wrong_pin">WRONG PIN</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="item_watch">Watch</string>
    <string name="item_radio">Radio</string>
    <string name="item_connection">Connection</string>
    <string name="item_games">Games</string>
    <string name="item_vod">Video on Demand</string>
    <string name="item_mod">Music on Demand</string>
    <string name="item_voyage">Voyage</string>
    <string name="item_settings">Settings</string>
    <string name="setting_language">Language</string>
    <string name="setting_volume">Volume</string>
    <string name="setting_brightness">Brightness</string>
    <string name="settings_tech_service">Tech. Service</string>
    <string name="device_ip">API IP Address</string>
    <string name="seat_number_hint">Seat Number</string>
    <string name="repeat_pin">Repeat PIN</string>
    <string name="setup_pin">Please setup your PIN</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="toast_API_IP_missing">API IP Address is empty.</string>
    <string name="toast_seat_number_missing">Seat Number is empty.</string>
    <string name="toast_API_IP_wrong_symbol">API IP Address contains wrong symbol</string>
    <string name="no_tv">There was a problem downloading content, please contact technical service</string>
    <string name="bus_plate_hint">Bus Plate</string>
    <string name="bus_plate_missing">Bus plate is empty</string>
    <string name="time_and_date">Time &amp; Date</string>
    <string name="distance_and_time">Distance &amp; Time</string>
    <string name="voyage_info">Voyage Info</string>
    <string name="voyage_no">Voyage No.</string>
    <string name="passenger">Passenger</string>
    <string name="weather">Weather</string>
    <string name="cloudy">CLOUDY</string>
</resources>
